overlapping issue fixed, new obstacle, more responsive

--- a/style.css
+++ b/style.css
@@ -17,8 +17,21 @@ body {
     align-items: center;
     align-content: center;
     color: white;
-    height: 700px;
+    height: 800px;
     margin: 0;
+}
+
+@media (max-width: 1500px) {
+    .main {
+        height: 700px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .main {
+        height: 700px;
+        flex-wrap: wrap;
+    }
 }
 
 .game-intro {
